--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tesseract backend using Cloud Functions",
   "main": "index.js",
   "scripts": {
-    "start": "GOOGLE_APPLICATION_CREDENTIALS=/Users/pandaxfly/Dropbox/DataScience/OCR-PROJECT/tesseract-ocr/dev-auth.json functions-framework --target=detectText",
+    "start": "GOOGLE_APPLICATION_CREDENTIALS=/Users/pandaxfly/Dropbox/DataScience/OCR-PROJECT/tesseract-ocr/dev-auth.json npx nodemon --inspect node_modules/@google-cloud/functions-framework --target=detectText",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy-gcp": "gcloud functions deploy tesseract-backend-dev --allow-unauthenticated --trigger-http --runtime=nodejs12 --entry-point detectText --set-env-vars GOOGLE_APPLICATION_CREDENTIALS=./dev.json"
   },
@@ -12,6 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/functions-framework": "^1.7.1",
-    "@google-cloud/vision": "^2.3.1"
+    "@google-cloud/vision": "^2.3.1",
+    "formidable": "^1.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
+  "nodemonConfig": {
+    "verbose": true
   }
 }
