--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^1.7.1",
     "@google-cloud/vision": "^2.3.1",
+    "express": "^4.17.1",
     "formidable": "^1.2.2"
   },
   "devDependencies": {
